--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "react-scripts test --env=node",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "commit": "npx git-cz"
   },
   "browserslist": [
     ">0.2%",
